data/derived/fa15/progs/unify/prog2028.ml.out
Characters 60-63:
  let f a x = bigAdd (a::[0]) (mulByDigit [x] l1) in
                                          ^^^
Error: This expression has type 'a list
       but an expression was expected of type int
